--- a/index.html
+++ b/index.html
@@ -1,86 +1,40 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>PABLO SYSTEM KIT – Preview</title>
   <style>
-    body {
-      background: #000;
-      color: #fff;
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 2rem;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.1rem;
-      max-width: 700px;
-      margin: 0 auto 2rem auto;
-    }
-    .preview-section {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 2rem;
-      margin: 3rem 0;
-    }
-    .preview-box {
-      background: #111;
-      padding: 1rem;
-      border-radius: 10px;
-      border: 1px solid #444;
-    }
-    .preview-box h2 {
-      font-size: 1.3rem;
-      margin-bottom: 0.5rem;
-    }
-    .preview-box p {
-      font-size: 0.95rem;
-    }
-    a.button {
-      display: inline-block;
-      background: white;
-      color: black;
-      padding: 1rem 2rem;
-      border-radius: 8px;
-      font-weight: bold;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      margin-top: 2rem;
-    }
-    a.button:hover {
-      background: #eee;
-    }
+    body { background: #000; color: #fff; font-family: 'Helvetica Neue', sans-serif; margin: 0; padding: 2rem; text-align: center; }
+    h1 { font-size: 3rem; margin-bottom: 1rem; }
+    p { font-size: 1.1rem; max-width: 700px; margin: 0 auto 2rem auto; }
+    .preview-section { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 2rem; margin: 3rem 0; }
+    .preview-box { background: #111; padding: 1rem; border-radius: 10px; border: 1px solid #444; }
+    .preview-box h2 { font-size: 1.3rem; margin-bottom: 0.5rem; }
+    .preview-box p { font-size: 0.95rem; }
+    a.button { display: inline-block; background: white; color: black; padding: 1rem 2rem; border-radius: 8px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; margin-top: 2rem; }
+    a.button:hover { background: #eee; }
   </style>
 </head>
 <body>
   <h1>PABLO SYSTEM KIT</h1>
   <p>Anteprima degli strumenti esclusivi del kit. Organizzazione, ispirazione e stile.</p>
-
   <div class="preview-section">
     <div class="preview-box">
-      <h2>📄 3 Domande Chiave</h2>
+      <h2>3 Domande Chiave</h2>
       <p>Un PDF con tre domande essenziali per prendere decisioni strategiche, con eleganza e chiarezza.</p>
       <a href="3_Domande_Chiave.pdf" target="_blank">Visualizza</a>
     </div>
-
     <div class="preview-box">
-      <h2>🧠 Canvas decisionale</h2>
+      <h2>Canvas decisionale</h2>
       <p>Uno schema visivo per ragionare con metodo e intuizione, pronto per la stampa o l’uso digitale.</p>
       <a href="Canvas_Decisionale.pdf" target="_blank">Visualizza</a>
     </div>
-
     <div class="preview-box">
-      <h2>🔗 Dashboard Notion</h2>
-      <p>Un link a una dashboard progettata per la gestione elegante e ordinata dei tuoi progetti.</p>
+      <h2>Dashboard Notion</h2>
+      <p>Link alla dashboard progettata per la gestione elegante e ordinata dei tuoi progetti.</p>
       <a href="Dashboard_Notion_Link.txt" target="_blank">Apri link</a>
     </div>
   </div>
-
-  <a class="button" href="pablo.system_kit.zip" download>📥 Scarica Tutto il Kit</a>
+  <a class="button" href="pablo.system_kit.zip" download>Scarica Tutto il Kit</a>
 </body>
 </html>
